--- a/src/assets/scss/components/_banner.scss
+++ b/src/assets/scss/components/_banner.scss
@@ -2,10 +2,15 @@
 .banner {
     background-color: $dark-background-color;;
     position: relative;
-    background-attachment: fixed;
     background-position: center top;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+@media (min-width: 1025px) {
+    .banner {
+        background-attachment: fixed;
+    }
 }
 //End Background Image
 
