--- a/src/assets/scss/components/_errorpage.scss
+++ b/src/assets/scss/components/_errorpage.scss
@@ -2,11 +2,16 @@
 .errorpage {
     background-color: $dark-background-color;
     position: relative;
-    background-attachment: fixed;
     background-position: center top;
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
+}
+
+@media (min-width: 1025px) {
+    .errorpage {
+        background-attachment: fixed;
+    }
 }
 
 .errorpage::before {
