--- a/src/assets/scss/components/_portfolio.scss
+++ b/src/assets/scss/components/_portfolio.scss
@@ -2,10 +2,15 @@
 .portfolio {
   background-color: $dark-background-color;
   position: relative;
-  background-attachment: fixed;
   background-position: center top;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+@media (min-width: 1025px) {
+    .portfolio {
+        background-attachment: fixed;
+    }
 }
 
 .portfolio::before {
